--- a/fahad.css
+++ b/fahad.css
@@ -1,3 +1,8 @@
+body{
+  padding: 0;
+  margin: 0;
+}
+
 /*css variables*/
 :root{
   --title--:50px;
@@ -23,7 +28,8 @@
   width: 100px;                
   /* height: 40px; */
   gap: 20px;
-  padding: 7px 7px; 
+  padding: 7px 7px;
+  margin-left: 20px; 
 }
 
 #name > h1 {
@@ -142,7 +148,7 @@ button{
   margin-top: 80px;
 }
 #main2{
-  
+ background-color: rgb(206, 238, 239); 
 }
 button:hover{
 background-color: blue;
@@ -153,4 +159,245 @@ background-color: blue;
 }
 #title>p{
   color: rgb(126, 125, 125);
+}
+#img{
+  width: 100%;
+}
+#img>img{
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+}
+#card{
+  background-color: white;
+ /* background-color: transparent;*/
+  display: inline-block;
+  width: 450px;
+  margin:10px ;
+  border-radius: 20px;
+  border: 2px solid black
+  
+  
+}
+#cardText>p{
+  color: rgb(126, 125, 125);
+}
+#cardText>button{
+  width: 30%;
+ /* font-size: xx-large;*/
+ background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+}
+#cardText{
+  margin: 20px 30px 20px 20px;
+}
+#cardDiv{display: inline-block;
+/*border: 2px solid black;*/
+padding:30px ;
+background-color: rgb(191, 226, 237);
+}
+#img{
+  width: 100%;
+}
+#img2{
+  width: 100%;
+}
+#img2>img{
+  width: 100%;
+  height:283px ;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+  display: inline-block;
+}
+#card2{
+  background-color:white ;
+  display: inline-block;
+  width: 450px;
+  margin:10px ;
+  border-radius: 20px;
+  border: 2px solid black
+}
+#cardText2>p{
+  color: rgb(126, 125, 125);
+  display: inline-block;
+}
+#cardText2>button{
+  width: 40%;
+ /* font-size: xx-large;*/
+  background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+  display: inline-block;
+}
+#cardText2{
+  margin: 20px 30px 20px 20px;
+}
+
+
+
+
+#img3{
+  width: 100%;
+}
+#img3>img{
+  width: 100%;
+  height: 285px; ;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+  display: inline-block;
+}
+#card3{
+  display: inline-block;
+  background-color:white ;
+  width: 450px;
+  margin:10px ;
+  border-radius: 20px;
+  border: 2px solid black
+}
+#cardText3>p{
+  color: rgb(126, 125, 125);
+  display: inline-block;
+}
+#cardText3>button{
+  width: 40%;
+ /* font-size: xx-large;*/
+  background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+  display: inline-block;
+}
+#cardText3{
+  margin: 20px 30px 20px 20px;
+}
+
+
+
+
+#img4{
+  width: 100%;
+}
+#img4>img{
+  width: 100%;
+  height: 285px; ;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+  display: inline-block;
+}
+#card4{
+  display: inline-block;
+  background-color:white ;
+  width: 450px;
+  margin:10px ;
+  border-radius: 20px;
+  border: 2px solid black
+}
+#cardText4>p{
+  color: rgb(126, 125, 125);
+  display: inline-block;
+}
+#cardText4>button{
+  width: 40%;
+ /* font-size: xx-large;*/
+  background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+  display: inline-block;
+}
+#cardText4{
+  margin: 20px 30px 20px 20px;
+}
+
+
+
+
+#img5{
+  width: 100%;
+}
+#img5>img{
+  width: 100%;
+  height: 258px; ;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+  display: inline-block;
+}
+#card5{
+  display: inline-block;
+  background-color:white ;
+  width: 450px;
+  margin:10px 10px;
+  border-radius: 20px;
+  border: 2px solid black
+}
+#cardText5>p{
+  color: rgb(126, 125, 125);
+  display: inline-block;
+}
+#cardText5>button{
+  width: 40%;
+ /* font-size: xx-large;*/
+  background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+  display: inline-block;
+}
+#cardText5{
+  margin: 20px 30px 20px 20px;
+}
+
+
+
+
+#img6{
+  width: 100%;
+}
+#img6>img{
+  width: 100%;
+  height: 258px; ;
+  border-radius: 20px;
+  box-shadow: 3px 5px 2px black;
+  display: inline-block;
+}
+#card6{
+  display: inline-block;
+  background-color:white ;
+  width: 450px;
+  margin:10px 10px;
+  border-radius: 20px;
+  border: 2px solid black
+}
+#cardText6>p{
+  color: rgb(126, 125, 125);
+  display: inline-block;
+}
+#cardText6>button{
+  width: 40%;
+ /* font-size: xx-large;*/
+  background-color: transparent;
+  border-color: lightgray;
+  box-shadow: 2px 3px 2px black;
+  display: inline-block;
+}
+#cardText6{
+  margin: 20px 30px 20px 20px;
+}
+
+#Contactdiv{
+  width: 45%;
+ /* border: 2px solid black ;*/
+  margin: 30px auto;
+  text-align: center;
+  margin-top: 80px;
+}
+#Contactdiv>h1{
+  font-size:var(--title--);
+  text-shadow:3px 4px 3px black ;
+}
+#Contactdiv>p{
+  color: rgb(126, 125, 125);
+}
+#form2{
+  font-size: 50px;
+  border: 2px solid black;
+  padding: 0px 0px;
 }
